Fix 'C++ importer does not correctly detect generalization in template classes'

With this commit a related test case has been added.

BUG:397664
FIXED-IN:2.26.1 (KDE Applications 18.08.1)